--- a/.github/workflows/simplecov-sample.yaml
+++ b/.github/workflows/simplecov-sample.yaml
@@ -15,6 +15,7 @@ jobs:
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.6.x
+    - run: bundle install
     - name: Test
       run: bundle exec rspec
 
